@@ -1,5 +1,7 @@
 2017-03-09  Jérôme Pasquier  <rainbru@free.fr>
 
+	* src/client/LoadingBar_Test.cpp (stepSize): test implemented. 
+	* src/client/LoadingBar.cpp (stepSize): implement getter.
 	* media/layouts/loading_bar.layout: fix the windows placements.
 
 2017-03-09  Jérôme Pasquier  <rainbru@free.fr>
